Add destination to paris

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             <div class="destination" id="sillicon-valley">
                 <h2>sillicon-valley</h2>
             </div>
+
+            <div class="destination" id="paris">
+                <h2>paris</h2>
+            </div>
         </div>
     </div>
 
