--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <div class="destination" id="paris">
                 <h2>paris</h2>
             </div>
+            <div class="destination" id="australia">
+                <h2>Australia</h2>
+            </div>
         </div>
     </div>
 
